# QtDB

./: .gitignore  CMakeLists.txt  README.md
data/: data.sql  tech_pax.db
src/: CMakeLists.txt  main.cpp  provisoire_pierre.cpp
src/Model/: DBIntecractor.cpp  DBIntecractor.h  DBInteraction.cpp  DBInteraction.h  DBInteractor.cpp  DBInteractor.h  test.cpp
src/View/: mainwindow.cpp  mainwindow.h  mainwindow.ui
