cmake_minimum_required(VERSION 3.3)                                                                                                                                                      
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt4 REQUIRED QtGui QtXml QtSql)
add_executable(QtDB src/main.cpp)
target_link_libraries(QtDB Qt4::QtGui Qt4::QtXml Qt4::QtSql)
