cmake_minimum_required(VERSION 2.8)

project(QtDB)

FIND_PACKAGE(Qt4 REQUIRED QtGui QtXml QtSql)
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTXML_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTSQL_INCLUDE_DIR})

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(src)
file(COPY data/tech_pax.db DESTINATION ${CMAKE_BINARY_DIR})
